--- a/pages.css
+++ b/pages.css
@@ -102,7 +102,7 @@ img {
 }
 
 .header-container{
-    max-width: 1320px;
+    max-width: 1260px;
 }
 
 .green-bg {
@@ -151,7 +151,7 @@ img {
 }
 
 .section-padding {
-    padding: 120px 0;
+    padding: 80px 0;
 }
 
 
@@ -426,10 +426,6 @@ img {
     background-color: #fff;
 }
 
-.section-padding {
-    padding: 120px 0;
-}
-
 .feature-section:before {
     position: absolute;
     content: "";
@@ -446,16 +442,16 @@ img {
 }
 
 .section-title h2 {
-    font-size: 50px;
+    font-size: 42px;
     font-weight: 600;
-    line-height: 60px;
+    line-height: 50px;
     color: #061815;
 }
 
 .section-title a {
-    font-size: 48px;
+    font-size: 42px;
     font-weight: 600;
-    line-height: 60px;
+    line-height: 50px;
     color: #f08143;
     position: relative;
     z-index: 1;
@@ -545,7 +541,7 @@ img {
     font-size: 18px;
     font-weight: 400;
     color: #fff;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 
@@ -566,9 +562,9 @@ img {
 }
 
 .section-title h2 {
-    font-size: 53px;
+    font-size: 42px;
     font-weight: 600;
-    line-height: 60px;
+    line-height: 50px;
     color: #061815;
 }
 
@@ -593,7 +589,7 @@ img {
 }
 
 .fouder-wrap .founder-title {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .fouder-wrap .founder-title h5 span {
@@ -816,6 +812,20 @@ img {
     right: 170px;
 }
 
+/********************     FINANCIAL CALCULATOR  *********************/
+/********************     CSS  END  *********************/
+
+
+
+/********************     COMMERCIAL PROPERTY INSURANCE  *********************/
+/********************     CSS  START  *********************/
+.com-title p::before{
+    right: 245px !important;
+}
+
+.health-title p::before, .home-title p::before, .motor-title p::before, .life-title p::before{
+    right: 125px !important;
+}
 
 /********************     FINANCIAL CALCULATOR  *********************/
 /********************     CSS  END  *********************/
