--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ a {
 }
 
 .header-container{
-    max-width: 1320px;
+    max-width: 1260px;
 }
 
 .green-bg {
@@ -361,8 +361,8 @@ img {
 }
 
 .hero-area-content {
-    margin-top: 115px;
-    margin-bottom: 120px;
+    margin-top: 100px;
+    margin-bottom: 80px;
     position: relative;
     z-index: 3;
 }
@@ -371,6 +371,7 @@ img {
     display: inline;
     position: relative;
     z-index: 1;
+
 }
 
 h3 {
@@ -400,17 +401,15 @@ h3 {
 
 .hero-area-content h1 {
     margin-top: 50px;
-}
-
-h1 {
-    font-size: 120px;
-    line-height: 120px;
+    font-size: 90px;
+    line-height: 100px;
     color: #061815;
 }
 
+
 .hero-area-content p {
-    padding-left: 465px;
-    margin-top: -95px;
+    padding-left: 400px;
+    margin-top: -75px;
     padding-right: 300px;
     font-size: 20px;
 }
@@ -494,7 +493,7 @@ h1 {
     height: 230px;
     background: #ecf5f7;    ;
     position: absolute;
-    left: 0;
+    left: 25px;
     bottom: 0;
     padding: 45px;
     z-index: 99;
@@ -529,7 +528,7 @@ h1 {
 }
 
 .section-padding {
-    padding: 120px 0;
+    padding: 80px 0;
 }
 
 .feature-section:before {
@@ -544,20 +543,19 @@ h1 {
 
 .section-title {
     position: relative;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .section-title h2 {
-    font-size: 50px;
+    font-size: 42px;
     font-weight: 600;
-    line-height: 60px;
-    color: #061815;
+    line-height: 50px;
 }
 
 .section-title a {
-    font-size: 48px;
+    font-size: 42px;
     font-weight: 600;
-    line-height: 60px;
+    line-height: 50px;
     color: #f08143;
     position: relative;
     z-index: 1;
@@ -648,7 +646,7 @@ h1 {
     font-size: 18px;
     font-weight: 400;
     color: #fff;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 
@@ -694,7 +692,7 @@ h1 {
 .single-service-inner p {
     font-size: 18px;
     font-weight: 400;
-    margin: 26px 0;
+    margin: 15px 0;
     padding-right: 50px;
 }
 
@@ -731,7 +729,7 @@ h1 {
 
 .section-title {
     position: relative;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .section-title h6 {
@@ -748,12 +746,6 @@ h1 {
     margin-bottom: 20px;
 }
 
-.section-title h2 {
-    font-size: 50px;
-    font-weight: 600;
-    line-height: 60px;
-    color: #061815;
-}
 
 .service-content-wrap p {
     font-size: 18px;
@@ -920,12 +912,6 @@ h1 {
 .cta-area-inner h6 {
     border-color: #f08143;
     color: #f08143;
-}
-
-.section-title h2 {
-    font-size: 50px;
-    font-weight: 600;
-    line-height: 60px;
 }
 
 .cta-area-inner p {
@@ -1639,7 +1625,7 @@ li {
     .single-service-inner p {
         font-size: 14px;
         line-height: normal;
-        margin: 20px 0;
+        margin: 15px 0;
         padding-right: 0;
     }
 
