--- a/style.css
+++ b/style.css
@@ -1600,13 +1600,14 @@ li {
     }
 
     .section-title h2 {
-        font-size: 32px;
-        line-height: 37px;
+        font-size: 24px;
+        line-height: 28px;
+    
     }
 
     .section-title a {
-        font-size: 34px;
-        line-height: 37px;
+        font-size: 24px;
+        line-height: 28px;    
     }
 
     .section-title a:before {
@@ -1841,6 +1842,8 @@ li {
 
     .hero-area-content h1 {
         margin-top: 15px;
+            font-size: 42px;
+            line-height: 44px;
     }
 
     .hero-area-content p {
@@ -1879,13 +1882,13 @@ li {
     }
 
     .section-title h2 {
-        font-size: 32px;
-        line-height: 37px;
+        font-size: 24px;
+        line-height: 28px;   
     }
 
     .section-title a {
-        font-size: 34px;
-        line-height: 37px;
+        font-size: 24px;
+        line-height: 28px;    
     }
 
     .section-title a:before {
@@ -1917,6 +1920,10 @@ li {
 
     .feature-section .row:nth-child(2){
         gap: 40px;
+    }
+
+    .feature-section .row.mt-60{
+        margin-top: 35px;
     }
 
     .feature-section:before, .feature-item-wrap::after{
@@ -2199,6 +2206,14 @@ li {
         text-align: center;
     }
 
+    .service-list2{
+        margin-top: 0 !important;
+    }
+
+    .service2-ul{
+        padding-top: 0 !important;
+    }
+
     .founder-year-wrap span {
         font-size: 32px;
         line-height: 35px;
@@ -2266,12 +2281,12 @@ li {
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      width: 30%;
+      width: 90%;
       background: #fff;
       padding: 25px;
       border-radius: 12px;
       z-index: 9999;
-      height: calc(100vh - 160px);
+      height: auto;
       position: relative;
   }
   
